manifests/proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
    service.alpha.openshift.io/serving-cert-secret-name: hw-event-proxy-secret
  name: hw-event-proxy-service
  labels:
    app: hw-event-proxy
spec:
  ports:
    - name: hw-event
      port: 9087
      targetPort: 9087
  selector:
    app: hw-event-proxy
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "false"
    service.beta.openshift.io/serving-cert-secret-name: hw-event-proxy-secret
  labels:
    app: hw-event-proxy
  name:  hw-event-publisher-service
spec:
  selector:
    app: hw-event-proxy
  clusterIP: None
  ports:
    - name: publisher-port
      port: 9043
  sessionAffinity: None
  type: ClusterIP
