manifests/proxy/route.yaml
apiVersion: route.openshift.io/v1

kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/disable_cookies: true
  name: hw-event-proxy
spec:
  to:
    kind: Service
    name: hw-event-proxy-service
  tls:
    termination: edge
  port:
    targetPort: 9087
